Fixed forms size on mobile

--- a/style.css
+++ b/style.css
@@ -183,7 +183,7 @@ footer {
     padding: 1em 2em !important;
   }
   .signup-form {
-    max-width: 24em;
+    max-width: 20em;
     padding: 1.5rem;
   }
   .landing-white-48 {
@@ -206,7 +206,7 @@ footer {
   }
   .form-container {
     padding: 1em !important;
-    max-width: 22em;
+    max-width: 20em;
   }
   .contact {
     padding: 2em;
